; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_ssl_calls.c_rdssl_hash_info_delete.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_ssl_calls.c_rdssl_hash_info_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hash_context = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rdssl_hash_info_delete(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.hash_context*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.hash_context*
  store %struct.hash_context* %5, %struct.hash_context** %3, align 8
  %6 = load %struct.hash_context*, %struct.hash_context** %3, align 8
  %7 = icmp ne %struct.hash_context* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  br label %32

9:                                                ; preds = %1
  %10 = load %struct.hash_context*, %struct.hash_context** %3, align 8
  %11 = getelementptr inbounds %struct.hash_context, %struct.hash_context* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %9
  %15 = load %struct.hash_context*, %struct.hash_context** %3, align 8
  %16 = getelementptr inbounds %struct.hash_context, %struct.hash_context* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = call i32 @CryptDestroyHash(i64 %17)
  br label %19

19:                                               ; preds = %14, %9
  %20 = load %struct.hash_context*, %struct.hash_context** %3, align 8
  %21 = getelementptr inbounds %struct.hash_context, %struct.hash_context* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %29

24:                                               ; preds = %19
  %25 = load %struct.hash_context*, %struct.hash_context** %3, align 8
  %26 = getelementptr inbounds %struct.hash_context, %struct.hash_context* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = call i32 @CryptReleaseContext(i64 %27, i32 0)
  br label %29

29:                                               ; preds = %24, %19
  %30 = load i8*, i8** %2, align 8
  %31 = call i32 @g_free(i8* %30)
  br label %32

32:                                               ; preds = %29, %8
  ret void
}

declare dso_local i32 @CryptDestroyHash(i64) #1

declare dso_local i32 @CryptReleaseContext(i64, i32) #1

declare dso_local i32 @g_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
